--- a/.gitignore
+++ b/.gitignore
@@ -86,9 +86,9 @@ celerybeat-schedule
 # Environments
 .env
 .venv
-env/
+.env/
 venv/
-ENV/
+.env/
 env.bak/
 venv.bak/
 
@@ -106,6 +106,5 @@ venv.bak/
 .mypy_cache/
 
 .idea/
-telegramtoken.txt
 db.sqlite3
 .directory
